# tts-preprocessing

./: COPYRIGHT.txt  README  README.md  TTS.py
HTML2TXT-0.2/: HTML2TXT  Makefile  Makefile.in  README  arbol.txt  config.status  configure.ac  main.cpp
HTML2TXT-0.2/.deps/: main.Po
HTML2TXT-0.3/: Makefile  Makefile.am  README  arbol.txt  config.status  configure  main.cpp
HTML2TXT-0.3/.deps/: main.Po
Normalizador-0.2/: Abreviaturas.txt  Avl2.h  CompilaNormalizador  PalabrasIngles.txt  README  aclocal.m4  config.cpp  config.h  config.status  config.txt  configure.ac  fst_string.cpp  fst_test.cc  funciones.cpp  funciones.h  misc.cpp  reemplazos  siglas.txt  utilfst.h  utility.cpp  utility.cpp.bak
Normalizador-0.2/.deps/: config.Po  diccitem.Po  fst_string.Po  fst_test.Po  misc.Po  utility.Po
Normalizador-0.2/autom4te.cache/: output.0  traces.0
Normalizador-0.3/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  fst_string.cpp  funciones.cpp  funciones.h  main.cpp  misc.cpp  utilfst.h  utility.cpp
Normalizador-0.3/.deps/: funciones.Po  main.Po
Normalizador-0.3/WFST/: simbolos.csv
SeparaOraciones-0.2/: Makefile  Makefile.am  Makefile.in  README  SeparaOraciones  config.status  main.cpp
SeparaOraciones-0.3/: EjemploIn.txt  Makefile  Makefile.in  README  config.status  configure  configure.ac  main.cpp
SeparaOraciones-0.3/.deps/: main.Po
Traductor-0.2/: Avl.h  Comparable.h  DiccIngles.txt  Makefile  Makefile.am  Makefile.in  README  Traductor  config.status  configure  configure.ac  diccitem.cpp  diccitem.h  main.cpp
Traductor-0.2/.deps/: diccitem.Po  main.Po
Traductor-0.3/: Avl.h  Avl2.h  Comparable.h  EjemploIn.txt  Makefile  Makefile.in  PalabrasIngles.txt  README  config.status  configure  configure.ac  diccitem.cpp  diccitem.h  main.cpp
