#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([HTML2TXT], [0.1], [esaudino@yahoo.com])
AM_INIT_AUTOMAKE([HTML2TXT], [0.1])
AC_CONFIG_SRCDIR([main.cpp])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
#AC_CHECK_LIB([htmlcxx], [parseTree], [], [
#	echo "htmlcxx library is required for this program" 
#	exit -1])


# Checks for libraries.
#AC_CHECK_LIB([boost_regex], [regex_match], [], [
#	echo "boost_regex library is required for this program" 
#	exit -1])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([strcasecmp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

