
AUTOMAKE_OPTIONS = foreign

#CXXFLAGS=-c -O2 -Wall 
AM_CPPFLAGS =-c -O2 -Wall 
AM_LDFLAGS =-L/usr/local/lib -Wno-unused-but-set-variable -Wno-unused-variable -Wno-write-strings -Wno-sign-compare -Wno-unused-result -Wno-uninitialized


bin_PROGRAMS = HTML2TXT
HTML2TXT_SOURCES = main.cpp
HTML2TXT_LDADD =-lhtmlcxx -lboost_regex 


