
AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS =-c -O2 -Wall 
AM_LDFLAGS =-L/usr/local/lib -Wno-unused-but-set-variable -Wno-unused-variable -Wno-write-strings -Wno-sign-compare -Wno-unused-result -Wno-uninitialized


bin_PROGRAMS = SeparaOraciones
SeparaOraciones_SOURCES = main.cpp
SeparaOraciones_LDADD =-lfreeling


